--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/island-style-fried-rice.html">Island Style Fried Rice</a></li>
+            <li><a href="./recipes/fried-chicken.html">Fried Chicken</a></li>
         </ul>
     </body>
 </html>
