--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -8,7 +8,7 @@
         <h1>Fried Chicken</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3651781.jpg">
 
-        <h2>Descriptions</h2>
+        <h2>Description</h2>
         <p>A fun chicken recipe the kids can help prepare. They love crushing the crackers. It does not matter if the measurements aren't perfect, just wing it!</p>
 
         <h2>Ingredients</h2>
